tests/core/snapshots/graphql-conformance-nested-lists-fragment.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

union Role = Admin | User

type Admin {
  name: String!
  region: String!
}

type Query {
  users: [[Role!]!]! @http(url: "http://upstream/users")
}

type User {
  accountRef: String! @http(url: "http://upstream/refs/{{.value.id}}")
  id: ID!
  name: String!
}
