tests/core/snapshots/graphql-conformance-nested-lists.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  addUsers(userNames: [[String!]!]!): Boolean
  @graphQL(
    args: [{ key: "userNames", value: "{{.args.userNames}}" }]
    url: "http://upstream/graphql"
    name: "addUsers"
  )
  userGroups: [[User!]!]!
  @graphQL(url: "http://upstream/graphql", name: "users")
}

type User {
  accountRef: String! @expr(body: "ref-{{.value.id}}-{{.value.name}}")
  id: ID!
  name: String!
}
