tests/core/snapshots/graphql-dataloader-no-batch-request.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream(batch: { delay: 1, headers: [] })
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  id: Int
  title: String
  user: User
  @graphQL(
    args: [{ key: "id", value: "{{.value.userId}}" }]
    url: "http://upstream/graphql"
    name: "user"
  )
  userId: Int
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
}

type User {
  id: Int
  name: String
}
