tests/core/snapshots/graphql-datasource-errors.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  user(id: Int): User
  @graphQL(
    args: [{ key: "id", value: "{{.args.id}}" }]
    url: "http://upstream/graphql"
    name: "user"
  )
}

type User {
  id: Int
  name: String
}
