tests/core/snapshots/graphql-datasource-mutation.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
  mutation: Mutation
}

input UserInput {
  email: String!
  name: String!
  phone: String
}

type Mutation {
  createUser(user: UserInput!): User
  @graphQL(
    args: [{ key: "user", value: "{{.args.user}}" }]
    url: "http://upstream/graphql"
    name: "createUser"
  )
}

type Query {
  users: [User] @graphQL(url: "http://upstream/graphql", name: "users")
}

type User {
  id: Int
  name: String
}
