tests/core/snapshots/graphql-datasource-with-empty-enum.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

enum EnumType {
  INFORMATION
  WARNING
}

type Post {
  severity: WithOptEnum!
}

type Query {
  post: Post @expr(body: { severity: { type: null } })
}

type WithOptEnum {
  type: EnumType
}
