tests/core/snapshots/graphql-nested-datasource.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type A {
  b: B
  @graphQL(
    args: [{ key: "id", value: "{{.value.bid}}" }]
    url: "http://upstream/graphql"
    name: "b"
  )
  bid: Int!
  c: C
  @graphQL(
    args: [{ key: "id", value: "{{.value.cid}}" }]
    url: "http://upstream/graphql"
    name: "c"
  )
  cid: Int!
  id: Int!
}

type B {
  id: Int!
  y: String!
}

type C {
  id: Int!
  x: String!
}

type Query {
  a: [A] @graphQL(url: "http://upstream/graphql", name: "a")
}
